--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -586,4 +586,144 @@ $Q(x)=\sum_{1\leq k, l \leq n}a_{k l}x_k x_l$,  $x=(x_1, \ldots, x_n)$. $Q(x)=(x
     (Критерий Сильвестра). Пусть у нас имеется матрица $Q$, $n\times n$, тогда $Q$ положительно определена тогда и только тогда, когда все угловые определители (два на главной диагонали и квадрат с ними, 4 элемента) не меньше нуля.
 \end{theorem}
 
+\section{Лекция 8.}
+
+В прошлый раз мы остановились на расссотрении поля экстремумов $f: G \rightarrow \RR, G \subset \RR^n$. Мы нашли два условия: 
+
+\begin{itemize}
+    \item $\grad f =0$ (необходимое); 
+    \item если (квадратичная?) форма $\sum_{q\leq k, l\leq n}\frac{\partial^2 f}{\partial x_k \partial x_l}$ положительно определа, то локальный минимум, если отрицательно, то локальный максимум.
+\end{itemize}
+
+Докажем второй пункт. Пусть $x^0=(x_1^0, \ldots, x_n^0)$, распишем формулу Тейлора $f(x)=f(x^0)+\sum_{k=1}^n\frac{\partial f}{\partial x_k}(x_k-x_k^0)+\frac{1}{2}\sum_{1\leq k, l \leq n}\frac{\partial^2 f}{\partial x_k \partial x_l}(x_k-x_k^0)(x_l-x_l^0)+o((x-x^0)^2)$. Предпоследнее слагаемое - квадратичная форма, пусть $A$. Тогда запишем
+\[
+    (A(x-x^0), (x-x^0))\geq \varepsilon ||x-x^0||^2, 
+\]
+что следует из положительности функции. $(Ax, x)>0$, $x\neq 0$, тогда $(Ax, x)>\varepsilon$ при $||x||=1$, тогда $(Ax, x)\geq \varepsilon ||x||^2$. \\ 
+
+Квадратичные формы, сопряжённые операторы. Каждая линейная операция $A:\RR^n\rightarrow \RR^n$ задаётся матрицей $n\times n$. Самосопряжённая матрица - матрица, которая удовлетворяет $(Ax, y)=(x, Ay)$, рассмотрим её свойства. Она диагонализируема, потому её собственные вектора это просто столбцы из нулей и единички на одном из мест. Собственные же числа - как раз числа на диагонали после диагонализации.
+
+\begin{exl}
+    $f(x, y)=x^4+y^4-2x^2$, $\RR^2\rightarrow \RR$. $\frac{\partial f}{\partial x}=4x^3-4x=0$, $\frac{\partial f}{\partial y}=4y^3$. Под подозрением к экстремуму имеются точки $(0, 1)$, $(1, 0)$, $(-1, 0)$. Рассмотрим $\frac{\partial^2 f}{\partial x^2}=12x^2-4$, $\frac{\partial^2 f}{\partial y^2}=12y^2$, $\frac{\partial^2 f}{\partial x \partial y}= 0$. Тогда для соответствующих точек мы получаем матрицы $2\times 2$, состоящие из нулей, кроме левого верхнего нуля - (-4), 8 и 8 соответственно. Так как глоюальный минимум должен существовать, то он минимальный по значению в этих трёх точках, а это - две последние пары (-1). 
+\end{exl}
+
+\begin{exl}
+    Рассмотрим $f(x, y)=xy\log(x^2+y^2)$. Зададим $f(0, 0)=0$, там с непрерывностью всё хорошо, а с гладкостью, конечно, нет. $\frac{\partial f}{\partial y}= y\log(x^2+y^2)+\frac{2x^2y}{x^2+y^2}$, по иксу симметрично. Приравняем оба выражения к нелю и бедем решать систему. Пусть $x, y\neq 0$. Поделим и получим систему поприятнее, вычтем из одного другое и получим, что $x=\pm y$. Тогда на одну переменную получем $\log(2x^2)+1=0$, тогда $x=\pm\frac{1}{\sqrt{2e}}$, отсюда 4 точки, а также с нулями ещё точки $(0, \pm 1)$, и симметрично. \ 
+
+    Как устроена $\frac{\partial^2 f}{\partial x^2}=\frac{2xy}{(x^2+y^2)}+\frac{4xy(x^2+y^2)-4x^3y}{(x^2+y^2)^2}$. Вторая производная по $y$ симметрична. $\frac{\partial^2 f}{\partial x\partial y}=\log(x^2+y^2)+\frac{2y^2}{(x^2+y^2)}+\frac{2x^2}{(x^2+y^2)}- \frac{4x^2y^2}{(x^2+y^2)^2}$. Попытаемся теперь разобраться, что происходит с ''подозрительными'' точками. С точкой $(0, 0)$ ничего не понятно, посмотрим на остальные. $(1, 0)$ имеет квадратичную форму 
+    
+    \begin{equation*}
+        \begin{pmatrix}
+            0 & 2 \\
+            2 & 0
+        \end{pmatrix}
+    \end{equation*}
+
+    Про точку $(-1, 0)$ и так всё понятно в силу нечётночти функции, она не подходит. Для точки $(0, 2)$ получаем аналогичную матрицу. Посмотрим теперь на $(\frac{1}{\sqrt{2e}}, \frac{1}{\sqrt{2e}})$, получаем матрицу
+
+    \begin{equation*}
+        \begin{pmatrix}
+            2 & 0 \\
+            0 & 2
+        \end{pmatrix}
+    \end{equation*}
+
+    Если у одной из координат поменяем знак, то получим
+
+    \begin{equation*}
+        \begin{pmatrix}
+            -2 & 0 \\
+            0 & -2
+        \end{pmatrix}
+    \end{equation*}
+
+    Осталась только точка $(0, 0)$, в которой ничего не понятно. Однако посмотрим на изменение знаков при фиксированных значениях и поймём, что она не обладает какими-то интересными свойствами. 
+
+\end{exl}
+
+Есть у нас в анализе одной переменной касательная к графику функции. Аналогичные вещи могут быть и в срарших размерностях, посмотрим на $\RR^3$. Напишем касательную $f(x_0,y_0)+\frac{\partial f}{\partial x}(x-x_0)+\frac{\partial f}{\partial y}(y-y_0)$. По аналогичным аппромаксимацонным моображениям, получим, что эта вещь, как и на плоскости, прекрасно аппроксимирует график функции. \ 
+
+Вектор нормали: $(\frac{\partial f}{\partial x}, \frac{\partial f}{\partial y}, -1)$. 
+
+\begin{exl}
+    Параметризуем сферу широтой и долготой. Сфера в $\RR^3$ - точки, сумма квадратов координат которых равна единице. Ну там по углам параметризуем, в общем, география 0 класс. 
+\end{exl}
+
+\section{Лекция 9.}
+
+(три минуты начала лекции проспаны)
+
+\begin{theorem}
+    Пусть $F:G\rightarrow \RR$, $G\subset \RR^2$ - открытое. Также выполнено: 
+
+    \begin{itemize}
+        \item $F(x_0, y_0)=0$; 
+        \item $F\in C^1(G)$; 
+        \item $F'_y(x_0, y_0)\neq 0$. 
+    \end{itemize}
+
+    Тогда $x_0\in I_x$, $y_0\in I_y$, $I_x\times I_y\subset \RR^2$, $\exists !$ $y=f(x)$ такая. что $F(x, y)=0$ тогда и только тогда, когда $y=f(x)$. 
+\end{theorem}\ 
+
+$f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$. 
+
+\begin{proof}
+    Рассмотрим $F(x, f(x))=0$, $F'_x(x, f(x))+F'_y(x, f(x))'f(x)=0$, это - неформальная мысль о том, почему производная именно такая, какая она и должна быть, а теперь перейдём к доказательству. \ 
+
+    Для определённости будем считать, что $F'_y(x_0, y_0)>0$. Поскольку мы предположили непрерывность произодных, то $F'_y>0$ в некоторой окрестности этой точки. Зафисксируем одну из координат и посмотрим на функцию $G(y)=F(x_0, y)$, мы знаем, что $G(y_0)=0$, $G'>0$, потому $G$ возрастает, а $G(y_1)<0<G(y_2)$ при $y_1<y_0<y_2$. \ 
+
+    Сама функция $F$ является непрерывной функцией двух переменных, потому если мы посмотрим $G_x(y)=F(x, y)$, то $G$ - возрастающая. Давайте обозначим, что $G$ задана (?) на $[y_0-\beta, y_0+\beta]$, тогда фиксируя $x$, $G_x(y_0-\beta)$, $G_x(y_0+\beta)>0$ для $x\in [x_0-\alpha, x_0+\alpha]$. В силу того, что функция возрастает, $\forall x\in [x_0-\alpha, x_0+\alpha]$, $\exists !y$, $G_x(y)=F(x, y)=0$. \ 
+
+    Рассмотрим $y=f(x)$ и попробуем установить непрерывность $f$ в окрестности точки $x_0$. Мы знаем, что $y_0=f(x_0)$, и нам нужно понять, почему при довольно малом сдвиге по $x$, $f$ также изменится минимально. $y_0=f(x_0)$. Рассмотрим множество решений уравнения $F(x, y)=0$ (внутри рассматриваемо прямоугольника). Мы уже доказали, что на каждом вертикальном отрезке (или горизонтальном, смотря как повернуть) есть ровно одна точка, которая удовлетворяет условию, тогда получим противоречие (не услышал в чём). \ 
+
+    $f$ непрерывна в любой точке $x$ из $(x_0-\alpha, x_0+\alpha)$. Рассмотрим теперь $h\in \RR$, а также $F(x, f(x))=0$, $x$ - фиксированный. $F(x+h, f(x+h))=0$, $h\rightarrow 0$. Тогда $F(x+h, f(x+h))-F(x, f(x))=F(x_h, f(x)+(f(x+h)-f(x))-F(x, f(x))) = h(F'_x(x, f(x)))+h\cdot \frac{f(x+h)-f(x)}{h}F_y'(x, f(x))+o(h)=0$ - по формуле тейлора при $h\rightarrow 0$ ($o$ можно расписать получше). Тогда $\exists \lim_{h\rightarrow 0}\frac{f(x+h)-f(x)}{x}=-\frac{F'_x}{F'_y}(x, f(x))$. 
+
+    \begin{remark}
+        Если $F\in C^k(G)$, то $f\in C^k$, так как дробь первой производной можно как угодно кучу раз дифференцировать. 
+    \end{remark}
+\end{proof}
+
+Начнём повышать размерности. \\
+
+\begin{theorem}
+    Пусть $F:G\in \RR$, $G$ - открыто в $\RR^{m+1}$, а также выполнено: 
+
+    \begin{itemize}
+        \item $F\in C'(G)$; 
+        \item $F(x_1, \ldots, x_m, y_0)=0$; 
+        \item $F_y'(x_1^0, \ldots, x_m^0, y_0)\neq 0$. 
+    \end{itemize}
+
+    Тогда $I_x^m\times I_y$, $F(x_1, \ldots, x_m, y)=0$ тогда и только тогда, когда $y=f(x)=f(x_1, \ldots, x_m)$. 
+\end{theorem}
+
+Опять-таки, записать можно ткаую же штуку для производной.
+
+\begin{proof}
+    Да и доказательство не сильно поменяется, в общем-то.
+\end{proof}
+
+Посмотрим теперь, что это нам даёт. Это нам даёт, что поверхность может быть задана неявным образом. Пусть $z=f(x, y)$, $F(x, y, z)=0$, тогда если мы нашли какую-то точку $F(x_0, y_0, z_0)=0$, $F_z'(x_0, y_0, z_0)\neq 0$. Тогда $F(x, y, z)=0$ тогда и только тогда, когда $z=f(x, y)$. \ 
+
+Вектор нормали должен был выглядеть как $(f_x', f_y', -1)$, но тут много чего непонятного, запишем как $\biggl( -\frac{F_x'}{F_z'}, -\frac{F_y'}{F_z'}, -1\biggr)$, при $F_z'\neq 0$. Тогда домножим и получим $(F_x', F_y', F_z')=\grad F$. \ 
+
+
+Попробуем начать формулировать теорему о неявной функции. Пусть $x=(x_1, \ldots, x_n)$, $y=(y_1, \ldots, y_n)$, и $F_i(\text{всех переменных})$ при $1\leq n$. Тогда если $x^0=(x_1^0, \ldots, x_m^0)$, $y^0=(y_1^0, \ldots, y_n^0)$ так что $F_k(x^0, y^0)=0$ для любого $1\leq k\leq n$. $F_k(x, y)=0$ тогда и только тогда, когда $y=f(x)$, $y^0=f(x^0)$. \ 
+
+Зафиксируем $(x_1, \ldots, x_m)$, Рассмотрим для $F_k$, $F:\RR^n\rightarrow \RR^n$, тогда дифференциал $F$ - матрица $A$ обратима. 
+
+\begin{theorem}
+    $F: G\rightarrow \RR^n$, где $G$ - открытое в $\RR^{m+n}$ и выоплнено следующее: 
+
+    \begin{itemize}
+        \item $F \in C^1(G)$; 
+        \item $F(x^0, y^0)=0$, $x^0\in \RR^m$, $y^0\in \RR^n$; 
+        \item $F_y'(x^0, y^0)$ - обратимая матрица.
+    \end{itemize}
+
+    Тогда окрестность $(x^0, y^0)$, $\exists ! \: f:\RR^m\rightarrow \RR^n$, $F(x, y)=0$ тогда и только тогда, когда $y=f(x)$. \ 
+
+    $f'(x)=-[f_y'(x, f(x))]^{-1}\cdot F_x'(x, f(x))$. 
+\end{theorem}
+
 \end{document}
